# ifflow

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN_SYSTEM.md  README.md  WIP_PUBLISHED_PROCESS_EDIT.md  WIP_USER_PROCESS_CREATION.md  docker-compose.yml
apps/backend/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 16fa5c3029b0_create_password_reset_tokens_table.py  275be82388ad_create_user_progress_table.py  3ae4702f5dcb_create_process_domain_tables.py  4a9325a6032c_create_users_table.py  b1c8a7f2d4e5_add_process_proposal_columns.py
apps/backend/app/: config.py  database.py  main.py
apps/backend/app/core/: enums.py  (+3 more)
apps/backend/docs/: CONTRACTS.md  PR_CHECKLIST.md  TASKS.md
apps/backend/tests/: conftest.py  test_admin_processes.py  test_admin_steps_resources.py  test_admin_users.py  test_auth_login.py  test_auth_me_logout.py  test_auth_register.py  test_auth_service_register.py  test_config.py  test_dependencies.py  test_email_client.py  test_exception_handlers.py  test_health.py  test_models_domain.py  test_models_user.py  test_models_user_progress.py  test_password_reset.py  test_process_approval.py  test_process_detail.py  test_process_flow.py  test_process_proposal.py  test_process_restore_delete.py  test_process_service.py  test_processes_management.py  test_progress_get.py  test_progress_list.py  test_progress_patch.py  test_public_processes.py  test_schemas_auth.py  test_sectors.py  test_security.py  test_seed_sectors.py  test_seed_super_admin.py  test_super_admin_users.py
(+190 files in other folders)
